@@ -158,16 +158,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.4.x: svn merge -c 1862014 ^/httpd/httpd/trunk .
      +1: jfclere, icing, jim
 
-  *) core: Split out the ability to parse wildcard files and directories
-     from the Include/IncludeOptional directives into a generic set of
-     functions ap_dir_nofnmatch() and ap_dir_fnmatch().
-     trunk patch: http://svn.apache.org/r1847430
-                  http://svn.apache.org/r1853302
-     2.4.x patch: https://svn.apache.org/repos/asf/httpd/httpd/patches/2.4.x/httpd-ap_dir_fnmatch-2.patch
-     +1: minfrin, jim, icing
-     jailletc36: at least, r1853302 is required, IMHO
-     minfrin: r1853302 is added in above, jim agrees
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
